Fix get-started video on mobile

--- a/src/css/imports/_adjustment.css
+++ b/src/css/imports/_adjustment.css
@@ -186,16 +186,29 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    overflow: auto;
-    height: 550px;
-    width: 854px;
-    max-width: 100%;
+    max-width: 894px;
+    padding-bottom: 56.25%;
+
+    @media screen and (min-width: 894px) {
+        padding-bottom: calc(894px / 100 * 56.25);
+    }
+
+& iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 894px;
+    max-height: 500px;
+    width: 100%;
+    height: 100%;
+}
 }
 
 .close-yt {
     position: absolute;
     z-index: 999;
     right: 0;
+    top: -3em;
     color: #fff !important;
     cursor: pointer;
 
